CSharpSyntax/NameParsing/Generated/CSharpNamesParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4.1.9004
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4.1.9004 ..\\..\\NameParsing\\CSharpNames.g 2013-10-26 10:43:17

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


	// using Expressions.Ast;


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  CSharpSyntax.NameParsing 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4.1.9004")]
[System.CLSCompliant(false)]
 internal  partial class CSharpNamesParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDENTIFIER", "IDENTIFIER_NAME_ASCII_START", "IDENTIFIER_PART", "IDENTIFIER_START_ASCII", "WS", "','", "'.'", "'::'", "'<'", "'>'", "'?'", "'['", "']'", "'bool'", "'byte'", "'char'", "'decimal'", "'double'", "'float'", "'int'", "'long'", "'object'", "'sbyte'", "'short'", "'string'", "'uint'", "'ulong'", "'ushort'", "'void'"
	};
	public const int EOF=-1;
	public const int IDENTIFIER=4;
	public const int IDENTIFIER_NAME_ASCII_START=5;
	public const int IDENTIFIER_PART=6;
	public const int IDENTIFIER_START_ASCII=7;
	public const int WS=8;
	public const int T__9=9;
	public const int T__10=10;
	public const int T__11=11;
	public const int T__12=12;
	public const int T__13=13;
	public const int T__14=14;
	public const int T__15=15;
	public const int T__16=16;
	public const int T__17=17;
	public const int T__18=18;
	public const int T__19=19;
	public const int T__20=20;
	public const int T__21=21;
	public const int T__22=22;
	public const int T__23=23;
	public const int T__24=24;
	public const int T__25=25;
	public const int T__26=26;
	public const int T__27=27;
	public const int T__28=28;
	public const int T__29=29;
	public const int T__30=30;
	public const int T__31=31;
	public const int T__32=32;

	public CSharpNamesParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public CSharpNamesParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		this.state.ruleMemo = new System.Collections.Generic.Dictionary<int, int>[39+1];


		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return CSharpNamesParser.tokenNames; } }
	public override string GrammarFileName { get { return "..\\..\\NameParsing\\CSharpNames.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	private sealed partial class prog_return : AstParserRuleReturnScope<CommonTree, CommonToken>
	{
		public TypeSyntax value;
		public prog_return(CSharpNamesParser grammar) {OnCreated(grammar);}
		partial void OnCreated(CSharpNamesParser grammar);
	}

	partial void EnterRule_prog();
	partial void LeaveRule_prog();
	// $ANTLR start "prog"
	// ..\\..\\NameParsing\\CSharpNames.g:32:1: prog returns [TypeSyntax value] : an= any_name EOF ;
	[GrammarRule("prog")]
	private CSharpNamesParser.prog_return prog()
	{
		EnterRule_prog();
		EnterRule("prog", 1);
		TraceIn("prog", 1);
		CSharpNamesParser.prog_return retval = new CSharpNamesParser.prog_return(this);
		retval.Start = (CommonToken)input.LT(1);
		int prog_StartIndex = input.Index;

		CommonTree root_0 = default(CommonTree);

		CommonToken EOF1 = default(CommonToken);
		CSharpNamesParser.any_name_return an = default(CSharpNamesParser.any_name_return);

		CommonTree EOF1_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "prog");
		DebugLocation(32, 4);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 1)) { return retval; }

			// ..\\..\\NameParsing\\CSharpNames.g:33:5: (an= any_name EOF )
			DebugEnterAlt(1);
			// ..\\..\\NameParsing\\CSharpNames.g:33:7: an= any_name EOF
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(33, 9);
			PushFollow(Follow._any_name_in_prog120);
			an=any_name();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, an.Tree);
			DebugLocation(33, 19);
			if (state.backtracking == 0)
			{
				 retval.value = (an!=null?an.value:default(TypeSyntax)); 
			}
			DebugLocation(33, 43);
			EOF1=(CommonToken)Match(input,EOF,Follow._EOF_in_prog124); if (state.failed) return retval;
			if (state.backtracking == 0) {
			EOF1_tree = (CommonTree)adaptor.Create(EOF1);
			adaptor.AddChild(root_0, EOF1_tree);
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}

		    catch (RecognitionException) 
		    {
		        throw;
		    }

		finally
		{
			TraceOut("prog", 1);
			LeaveRule("prog", 1);
			LeaveRule_prog();
			if (state.backtracking > 0) { Memoize(input, 1, prog_StartIndex); }

		}
		DebugLocation(34, 4);
		} finally { DebugExitRule(GrammarFileName, "prog"); }
		return retval;

	}
	// $ANTLR end "prog"

	private sealed partial class any_name_return : AstParserRuleReturnScope<CommonTree, CommonToken>
	{
		public TypeSyntax value;
		public any_name_return(CSharpNamesParser grammar) {OnCreated(grammar);}
		partial void OnCreated(CSharpNamesParser grammar);
	}

	partial void EnterRule_any_name();
	partial void LeaveRule_any_name();
	// $ANTLR start "any_name"
	// ..\\..\\NameParsing\\CSharpNames.g:36:1: any_name returns [TypeSyntax value] : a= array ;
	[GrammarRule("any_name")]
	private CSharpNamesParser.any_name_return any_name()
	{
		EnterRule_any_name();
		EnterRule("any_name", 2);
		TraceIn("any_name", 2);
		CSharpNamesParser.any_name_return retval = new CSharpNamesParser.any_name_return(this);
		retval.Start = (CommonToken)input.LT(1);
		int any_name_StartIndex = input.Index;

		CommonTree root_0 = default(CommonTree);

		CSharpNamesParser.array_return a = default(CSharpNamesParser.array_return);

		try { DebugEnterRule(GrammarFileName, "any_name");
		DebugLocation(36, 4);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 2)) { return retval; }

			// ..\\..\\NameParsing\\CSharpNames.g:37:5: (a= array )
			DebugEnterAlt(1);
			// ..\\..\\NameParsing\\CSharpNames.g:37:7: a= array
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(37, 8);
			PushFollow(Follow._array_in_any_name147);
			a=array();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, a.Tree);
			DebugLocation(37, 15);
			if (state.backtracking == 0)
			{
				 retval.value = (a!=null?a.value:default(TypeSyntax)); 
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}

		    catch (RecognitionException) 
		    {
		        throw;
		    }

		finally
		{
			TraceOut("any_name", 2);
			LeaveRule("any_name", 2);
			LeaveRule_any_name();
			if (state.backtracking > 0) { Memoize(input, 2, any_name_StartIndex); }

		}
		DebugLocation(38, 4);
		} finally { DebugExitRule(GrammarFileName, "any_name"); }
		return retval;

	}
	// $ANTLR end "any_name"

	private sealed partial class array_return : AstParserRuleReturnScope<CommonTree, CommonToken>
	{
		public TypeSyntax value;
		public array_return(CSharpNamesParser grammar) {OnCreated(grammar);}
		partial void OnCreated(CSharpNamesParser grammar);
	}

	partial void EnterRule_array();
	partial void LeaveRule_array();
	// $ANTLR start "array"
	// ..\\..\\NameParsing\\CSharpNames.g:40:1: array returns [TypeSyntax value] : (n= nullable ar= array_ranks |n= nullable );
	[GrammarRule("array")]
	private CSharpNamesParser.array_return array()
	{
		EnterRule_array();
		EnterRule("array", 3);
		TraceIn("array", 3);
		CSharpNamesParser.array_return retval = new CSharpNamesParser.array_return(this);
		retval.Start = (CommonToken)input.LT(1);
		int array_StartIndex = input.Index;

		CommonTree root_0 = default(CommonTree);

		CSharpNamesParser.nullable_return n = default(CSharpNamesParser.nullable_return);
		CSharpNamesParser.array_ranks_return ar = default(CSharpNamesParser.array_ranks_return);

		try { DebugEnterRule(GrammarFileName, "array");
		DebugLocation(40, 4);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 3)) { return retval; }

			// ..\\..\\NameParsing\\CSharpNames.g:41:5: (n= nullable ar= array_ranks |n= nullable )
			int alt1=2;
			try { DebugEnterDecision(1, false);
			try
			{
				alt1 = dfa1.Predict(input);
			}
			catch (NoViableAltException nvae)
			{
				DebugRecognitionException(nvae);
				throw;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// ..\\..\\NameParsing\\CSharpNames.g:41:7: n= nullable ar= array_ranks
				{
				root_0 = (CommonTree)adaptor.Nil();

				DebugLocation(41, 8);
				PushFollow(Follow._nullable_in_array172);
				n=nullable();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, n.Tree);
				DebugLocation(41, 20);
				PushFollow(Follow._array_ranks_in_array176);
				ar=array_ranks();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, ar.Tree);
				DebugLocation(41, 33);
				if (state.backtracking == 0)
				{

					        var result = new ArrayTypeSyntax
					        {
					            ElementType = (n!=null?n.value:default(TypeSyntax))
					        };

					        foreach (var item in (ar!=null?ar.value:default(List<ArrayRankSpecifierSyntax>)))
					        {
					            result.RankSpecifiers.Add(item);
					        }

					        retval.value = result;
					      
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// ..\\..\\NameParsing\\CSharpNames.g:54:7: n= nullable
				{
				root_0 = (CommonTree)adaptor.Nil();

				DebugLocation(54, 8);
				PushFollow(Follow._nullable_in_array188);
				n=nullable();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, n.Tree);
				DebugLocation(54, 18);
				if (state.backtracking == 0)
				{
					 retval.value = (n!=null?n.value:default(TypeSyntax)); 
				}

				}
				break;

			}
			retval.Stop = (CommonToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}

		    catch (RecognitionException) 
		    {
		        throw;
		    }

		finally
		{
			TraceOut("array", 3);
			LeaveRule("array", 3);
			LeaveRule_array();
			if (state.backtracking > 0) { Memoize(input, 3, array_StartIndex); }

		}
		DebugLocation(55, 4);
		} finally { DebugExitRule(GrammarFileName, "array"); }
		return retval;

	}
	// $ANTLR end "array"

	private sealed partial class array_ranks_return : AstParserRuleReturnScope<CommonTree, CommonToken>
	{
		public List<ArrayRankSpecifierSyntax> value;
		public array_ranks_return(CSharpNamesParser grammar) {OnCreated(grammar);}
		partial void OnCreated(CSharpNamesParser grammar);
	}

	partial void EnterRule_array_ranks();
	partial void LeaveRule_array_ranks();
	// $ANTLR start "array_ranks"
	// ..\\..\\NameParsing\\CSharpNames.g:57:1: array_ranks returns [List<ArrayRankSpecifierSyntax> value] : ( '[' cl= comma_list ']' ar= array_ranks | '[' cl= comma_list ']' );
	[GrammarRule("array_ranks")]
	private CSharpNamesParser.array_ranks_return array_ranks()
	{
		EnterRule_array_ranks();
		EnterRule("array_ranks", 4);
		TraceIn("array_ranks", 4);
		CSharpNamesParser.array_ranks_return retval = new CSharpNamesParser.array_ranks_return(this);
		retval.Start = (CommonToken)input.LT(1);
		int array_ranks_StartIndex = input.Index;

		CommonTree root_0 = default(CommonTree);

		CommonToken char_literal2 = default(CommonToken);
		CommonToken char_literal3 = default(CommonToken);
		CommonToken char_literal4 = default(CommonToken);
		CommonToken char_literal5 = default(CommonToken);
		CSharpNamesParser.comma_list_return cl = default(CSharpNamesParser.comma_list_return);
		CSharpNamesParser.array_ranks_return ar = default(CSharpNamesParser.array_ranks_return);

		CommonTree char_literal2_tree = default(CommonTree);
		CommonTree char_literal3_tree = default(CommonTree);
		CommonTree char_literal4_tree = default(CommonTree);
		CommonTree char_literal5_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "array_ranks");
		DebugLocation(57, 4);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 4)) { return retval; }

			// ..\\..\\NameParsing\\CSharpNames.g:58:5: ( '[' cl= comma_list ']' ar= array_ranks | '[' cl= comma_list ']' )
			int alt2=2;
			try { DebugEnterDecision(2, false);
			int LA2_1 = input.LA(1);

			if ((LA2_1==15))
			{
				int LA2_2 = input.LA(2);

				if ((LA2_2==16))
				{
					int LA2_3 = input.LA(3);

					if ((EvaluatePredicate(synpred2_CSharpNames_fragment)))
					{
						alt2 = 1;
					}
					else if ((true))
					{
						alt2 = 2;
					}
					else
					{
						if (state.backtracking>0) {state.failed=true; return retval;}
						NoViableAltException nvae = new NoViableAltException("", 2, 2, input, 3);
						DebugRecognitionException(nvae);
						throw nvae;
					}
				}
				else if ((LA2_2==9))
				{
					int LA2_3 = input.LA(3);

					if ((EvaluatePredicate(synpred2_CSharpNames_fragment)))
					{
						alt2 = 1;
					}
					else if ((true))
					{
						alt2 = 2;
					}
					else
					{
						if (state.backtracking>0) {state.failed=true; return retval;}
						NoViableAltException nvae = new NoViableAltException("", 2, 3, input, 3);
						DebugRecognitionException(nvae);
						throw nvae;
					}
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 2, 1, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}
			else
			{
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae = new NoViableAltException("", 2, 0, input, 1);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// ..\\..\\NameParsing\\CSharpNames.g:58:7: '[' cl= comma_list ']' ar= array_ranks
				{
				root_0 = (CommonTree)adaptor.Nil();

				DebugLocation(58, 7);
				char_literal2=(CommonToken)Match(input,15,Follow._15_in_array_ranks211); if (state.failed) return retval;
				if (state.backtracking == 0) {
				char_literal2_tree = (CommonTree)adaptor.Create(char_literal2);
				adaptor.AddChild(root_0, char_literal2_tree);
				}
				DebugLocation(58, 13);
				PushFollow(Follow._comma_list_in_array_ranks215);
				cl=comma_list();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, cl.Tree);
				DebugLocation(58, 25);
				char_literal3=(CommonToken)Match(input,16,Follow._16_in_array_ranks217); if (state.failed) return retval;
				if (state.backtracking == 0) {
				char_literal3_tree = (CommonTree)adaptor.Create(char_literal3);
				adaptor.AddChild(root_0, char_literal3_tree);
				}
				DebugLocation(58, 31);
				PushFollow(Follow._array_ranks_in_array_ranks221);
				ar=array_ranks();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, ar.Tree);
				DebugLocation(58, 44);
				if (state.backtracking == 0)
				{

					        retval.value = (ar!=null?ar.value:default(List<ArrayRankSpecifierSyntax>));
					        retval.value.Insert(0, BuildArrayRankSpecifier((cl!=null?cl.value:default(int))));
					      
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// ..\\..\\NameParsing\\CSharpNames.g:62:7: '[' cl= comma_list ']'
				{
				root_0 = (CommonTree)adaptor.Nil();

				DebugLocation(62, 7);
				char_literal4=(CommonToken)Match(input,15,Follow._15_in_array_ranks231); if (state.failed) return retval;
				if (state.backtracking == 0) {
				char_literal4_tree = (CommonTree)adaptor.Create(char_literal4);
				adaptor.AddChild(root_0, char_literal4_tree);
				}
				DebugLocation(62, 13);
				PushFollow(Follow._comma_list_in_array_ranks235);
				cl=comma_list();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, cl.Tree);
				DebugLocation(62, 25);
				char_literal5=(CommonToken)Match(input,16,Follow._16_in_array_ranks237); if (state.failed) return retval;
				if (state.backtracking == 0) {
				char_literal5_tree = (CommonTree)adaptor.Create(char_literal5);
				adaptor.AddChild(root_0, char_literal5_tree);
				}
				DebugLocation(62, 29);
				if (state.backtracking == 0)
				{

					        retval.value = new List<ArrayRankSpecifierSyntax>
					        {
					            BuildArrayRankSpecifier((cl!=null?cl.value:default(int)))
					        };
					      
				}

				}
				break;

			}
			retval.Stop = (CommonToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}

		    catch (RecognitionException) 
		    {
		        throw;
		    }

		finally
		{
			TraceOut("array_ranks", 4);
			LeaveRule("array_ranks", 4);
			LeaveRule_array_ranks();
			if (state.backtracking > 0) { Memoize(input, 4, array_ranks_StartIndex); }

		}
		DebugLocation(68, 4);
		} finally { DebugExitRule(GrammarFileName, "array_ranks"); }
		return retval;

	}
	// $ANTLR end "array_ranks"

	private sealed partial class nullable_return : AstParserRuleReturnScope<CommonTree, CommonToken>
	{
		public TypeSyntax value;
		public nullable_return(CSharpNamesParser grammar) {OnCreated(grammar);}
		partial void OnCreated(CSharpNamesParser grammar);
	}

	partial void EnterRule_nullable();
	partial void LeaveRule_nullable();
	// $ANTLR start "nullable"
	// ..\\..\\NameParsing\\CSharpNames.g:70:1: nullable returns [TypeSyntax value] : (gn= generic_name '?' |gn= generic_name );
	[GrammarRule("nullable")]
	private CSharpNamesParser.nullable_return nullable()
	{
		EnterRule_nullable();
		EnterRule("nullable", 5);
		TraceIn("nullable", 5);
		CSharpNamesParser.nullable_return retval = new CSharpNamesParser.nullable_return(this);
		retval.Start = (CommonToken)input.LT(1);
		int nullable_StartIndex = input.Index;

		CommonTree root_0 = default(CommonTree);

		CommonToken char_literal6 = default(CommonToken);
		CSharpNamesParser.generic_name_return gn = default(CSharpNamesParser.generic_name_return);

		CommonTree char_literal6_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "nullable");
		DebugLocation(70, 4);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 5)) { return retval; }

			// ..\\..\\NameParsing\\CSharpNames.g:71:5: (gn= generic_name '?' |gn= generic_name )
			int alt3=2;
			try { DebugEnterDecision(3, false);
			try
			{
				alt3 = dfa3.Predict(input);
			}
			catch (NoViableAltException nvae)
			{
				DebugRecognitionException(nvae);
				throw;
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// ..\\..\\NameParsing\\CSharpNames.g:71:7: gn= generic_name '?'
				{
				root_0 = (CommonTree)adaptor.Nil();

				DebugLocation(71, 9);
				PushFollow(Follow._generic_name_in_nullable262);
				gn=generic_name();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, gn.Tree);
				DebugLocation(71, 23);
				char_literal6=(CommonToken)Match(input,14,Follow._14_in_nullable264); if (state.failed) return retval;
				if (state.backtracking == 0) {
				char_literal6_tree = (CommonTree)adaptor.Create(char_literal6);
				adaptor.AddChild(root_0, char_literal6_tree);
				}
				DebugLocation(71, 27);
				if (state.backtracking == 0)
				{

					        retval.value = new NullableTypeSyntax
					        {
					            ElementType = (gn!=null?gn.value:default(TypeSyntax))
					        };
					      
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// ..\\..\\NameParsing\\CSharpNames.g:77:7: gn= generic_name
				{
				root_0 = (CommonTree)adaptor.Nil();

				DebugLocation(77, 9);
				PushFollow(Follow._generic_name_in_nullable276);
				gn=generic_name();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, gn.Tree);
				DebugLocation(77, 23);
				if (state.backtracking == 0)
				{
					 retval.value = (gn!=null?gn.value:default(TypeSyntax)); 
				}

				}
				break;

			}
			retval.Stop = (CommonToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}

		    catch (RecognitionException) 
		    {
		        throw;
		    }

		finally
		{
			TraceOut("nullable", 5);
			LeaveRule("nullable", 5);
			LeaveRule_nullable();
			if (state.backtracking > 0) { Memoize(input, 5, nullable_StartIndex); }

		}
		DebugLocation(78, 4);
		} finally { DebugExitRule(GrammarFileName, "nullable"); }
		return retval;

	}
	// $ANTLR end "nullable"

	private sealed partial class generic_name_return : AstParserRuleReturnScope<CommonTree, CommonToken>
	{
		public TypeSyntax value;
		public generic_name_return(CSharpNamesParser grammar) {OnCreated(grammar);}
		partial void OnCreated(CSharpNamesParser grammar);
	}

	partial void EnterRule_generic_name();
	partial void LeaveRule_generic_name();
	// $ANTLR start "generic_name"
	// ..\\..\\NameParsing\\CSharpNames.g:80:1: generic_name returns [TypeSyntax value] : (n= name '<' bga= bound_generic_arguments '>' |n= name '<' cl= comma_list '>' |n= name );
	[GrammarRule("generic_name")]
	private CSharpNamesParser.generic_name_return generic_name()
	{
		EnterRule_generic_name();
		EnterRule("generic_name", 6);
		TraceIn("generic_name", 6);
		CSharpNamesParser.generic_name_return retval = new CSharpNamesParser.generic_name_return(this);
		retval.Start = (CommonToken)input.LT(1);
		int generic_name_StartIndex = input.Index;

		CommonTree root_0 = default(CommonTree);

		CommonToken char_literal7 = default(CommonToken);
		CommonToken char_literal8 = default(CommonToken);
		CommonToken char_literal9 = default(CommonToken);
		CommonToken char_literal10 = default(CommonToken);
		CSharpNamesParser.name_return n = default(CSharpNamesParser.name_return);
		CSharpNamesParser.bound_generic_arguments_return bga = default(CSharpNamesParser.bound_generic_arguments_return);
		CSharpNamesParser.comma_list_return cl = default(CSharpNamesParser.comma_list_return);

		CommonTree char_literal7_tree = default(CommonTree);
		CommonTree char_literal8_tree = default(CommonTree);
		CommonTree char_literal9_tree = default(CommonTree);
		CommonTree char_literal10_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "generic_name");
		DebugLocation(80, 4);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 6)) { return retval; }

			// ..\\..\\NameParsing\\CSharpNames.g:81:5: (n= name '<' bga= bound_generic_arguments '>' |n= name '<' cl= comma_list '>' |n= name )
			int alt4=3;
			try { DebugEnterDecision(4, false);
			try
			{
				alt4 = dfa4.Predict(input);
			}
			catch (NoViableAltException nvae)
			{
				DebugRecognitionException(nvae);
				throw;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// ..\\..\\NameParsing\\CSharpNames.g:81:7: n= name '<' bga= bound_generic_arguments '>'
				{
				root_0 = (CommonTree)adaptor.Nil();
